@@ -1,3 +1,8 @@
+Sun Aug  9 02:12:45 CEST 2009  John Tytgat  <John.Tytgat@aaug.net>
+
+	* riscos/stubs.s(_clib_initialisemodule): A couple of micro
+	optimisations.
+
 Sat Mar 28 14:40:18 CET 2009  John Tytgat  <John.Tytgat@aaug.net>
 
 	* riscos/stubs.s(_clib_entermodule): Updated comments.
